--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
     <link rel="stylesheet" href="style.css" >
 </head>
 <body>
+    <div class="container">
     <h1>my count</h1>
     <h2 id="count-el">:</h2>
 
     <button id="btn" onclick="increment()">INCREMENT</button>
     <button id="btn" onclick="decrement()">DECREMENT</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
